Add option to disable timed dependant tests
The disabled tests rely on timing to pass correctly. On a virtualized
system under heavy load, these tests randomly fail because they miss
a timer or other timing related issues.

Signed-off-by: Jeremy Puhlman <jpuhlman@mvista.com>

--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -74,7 +74,7 @@ CLEAN_TARGETS = testfile.tmp lfstests/*.bin \
 CLEAN_SUBDIRS = internal
 
 INCDIR=../include
-INCLUDES=-I$(INCDIR) -I$(srcdir)/../include
+INCLUDES=-I$(INCDIR) -I$(srcdir)/../include -I$(srcdir)/../include/arch/@DEFAULT_OSDIR@
 
 # link programs using -no-install to get real executables not
 # libtool wrapper scripts which link an executable when first run.
